# fastpatch

./: .gitignore  README.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  RELEASE_v0.2.1.md  RELEASE_v0.2.2.md  RELEASE_v0.2.3.md  RELEASE_v0.2.4.md  RELEASE_v0.3.0.md  RELEASE_v0.3.1.md  index.html  package.json  pnpm-lock.yaml  strategies.json
resources/zapret-extra/: general (ALT11 APEX).bat  general (APEX).bat
resources/zapret-extra/lists/: ipset-exclude-apex-ea.txt  list-apex-extra.txt  list-apex-nodesync.txt  list-apex.txt
resources/zapret2-extra/presets/: Apex Legends.txt
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_prefs.rs  launch.rs  lib.rs  main.rs  paths.rs  startup_log.rs  win_autostart.rs  win_process.rs
src-tauri/src/commands/: apex.rs  autostart_connect.rs  engine_process.rs  hosts.rs  mod.rs  preset_loader.rs  probe.rs  strategy.rs  strategy_loader.rs  strategy_runner.rs  updater.rs  zapret2_runner.rs  zapret2_updater.rs  zapret_backend.rs  zapret_config.rs
src/components/: AddStrategyModal.tsx  AdminBanner.tsx  ApexPanel.tsx  ErrorBanner.tsx  LoadingScreen.tsx  Sidebar.tsx  StatusBannerStack.tsx  StrategyCard.tsx  TagBadge.tsx  WinwsBusyBanner.tsx  WinwsSessionBanner.tsx  ZapretBanner.tsx
src/components/settings/: ConnectionSettings.tsx
src/lib/: appErrors.ts  probeUi.test.ts  probeUi.ts
src/pages/: HomePage.tsx  HostsPage.tsx  SettingsPage.tsx  StrategiesPage.tsx
src/stores/: appStore.ts
src/stores/slices/: loadingSlice.ts  navigationSlice.ts
