[package]
name = "fastpatch"
version = "0.1.0"
description = "fastpatch — GUI wrapper for zapret-discord-youtube"
authors = ["fastpatch"]
edition = "2021"

[lib]
name = "fastpatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
